--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,10 +27,10 @@ stages:
         inputs:
           command: custom
           customCommand: run build -- --prod
-      # - task: PublishPipelineArtifact@0
-      #   inputs:
-      #     artifactName: 'calculator-tdd-anuglar'
-      #     targetPath: 'dist'
+      - task: PublishPipelineArtifact@0
+        inputs:
+          artifactName: 'calculator-tdd-anuglar'
+          targetPath: 'dist'
       
   - stage: Test
     jobs:
@@ -45,10 +45,20 @@ stages:
       steps:
       - template: azure/templates/install_packages.yml  # Template of build
       - task: Npm@1
-        displayName: 'Run Unit Tests'
+        displayName: 'Test Angular'
         inputs:
           command: custom
-          customCommand: run test
+          customCommand: run test -- --watch=false --code-coverage
+
+      - task: PublishCodeCoverageResults@1
+        displayName: 'Publish code coverage Angular results'
+        condition: succeededOrFailed()
+        inputs:
+          codeCoverageTool: Cobertura
+          summaryFileLocation: 'coverage/cobertura-coverage.xml'
+          reportDirectory: coverage
+          failIfCoverageEmpty: true
+
     - job: Test_E2E
       steps:
       - template: azure/templates/install_packages.yml  # Template of build
