--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-junit-reporter": "^1.2.0",
     "protractor": "~5.4.0",
     "puppeteer": "^1.20.0",
     "ts-node": "~7.0.0",
