--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -51,6 +51,7 @@ stages:
           command: custom
           customCommand: run test -- --watch=false --code-coverage
 
+      # Publish tests
       - task: PublishCodeCoverageResults@1
         displayName: 'Publish code coverage Angular results'
         condition: succeededOrFailed()
@@ -59,6 +60,22 @@ stages:
           summaryFileLocation: 'coverage/cobertura-coverage.xml'
           reportDirectory: coverage
           failIfCoverageEmpty: true
+
+      - task: PublishTestResults@2
+        displayName: 'Publish Angular test results'
+        condition: succeededOrFailed()
+        inputs:
+          searchFolder: $(System.DefaultWorkingDirectory)/src/angular7/junit
+          testRunTitle: Angular
+          testResultsFormat: JUnit
+          testResultsFiles: "**/TESTS*.xml"
+      
+      - task: DeleteFiles@1
+        displayName: 'Delete JUnit files'
+        inputs:
+          SourceFolder: src/angular7/junit
+          Contents: 'TESTS*.xml'
+
 
     - job: Test_E2E
       steps:
