--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,7 +8,13 @@ name: $(Date:yyyyMMdd)$(Rev:.r)
 trigger:
   - master
   - develop
-  - feature/*
+
+pr:
+  autoCancel: false
+  branches:
+    include:
+      - master
+      - releases/*
 
 variables:
   buildConfiguration: 'Release'
