--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -42,6 +42,13 @@ stages:
         inputs:
           PathtoPublish: 'www'
           ArtifactName: calculator-tdd-anuglar-2
+      - task: ArchiveFiles@2
+        inputs:
+          rootFolderOrFile: '$(Build.BinariesDirectory)/www'
+          includeRootFolder: true
+          archiveType: 'zip'
+          archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+          replaceExistingArchive: true
       
   - stage: Test
     jobs:
