fix(git): ignore env

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 credential=JUANSE
 love=JESS
+GITHUB_TOKEN=eb639d5b95a6d72a12109060be3cc44d251489c2
+GH_TOKEN=eb639d5b95a6d72a12109060be3cc44d251489c2
