--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "ng lint --fix",
     "check-lint": "ng lint",
     "e2e": "ng e2e",
-    "coverage": "ng test --codeCoverage"
+    "coverage": "ng test --codeCoverage",
+    "deploy": "firebase deploy --token $FIREBASE_TOKEN"
   },
   "private": true,
   "dependencies": {
@@ -52,6 +53,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "firebase-tools": "^7.12.1",
     "jasmine-core": "~3.4.0",
     "jasmine-reporters": "^2.3.2",
     "jasmine-spec-reporter": "~4.2.1",
