--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
+    "@types/mathjs": "^5.0.1",
     "core-js": "^2.5.4",
-    "mathjs": "^6.2.3",
+    "mathjs": "5.10.3",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
