--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
     "@types/mathjs": "^5.0.1",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^8.6.0",
+    "@ngrx/router-store": "^8.6.0",
+    "@ngrx/store": "^8.6.0",
+    "@ngrx/store-devtools": "^8.6.0",
     "core-js": "^2.5.4",
     "mathjs": "5.10.3",
     "rxjs": "~6.5.1",
